tests/parse_print/autogen/441~1435208191_85/stderr.expected
Error:
    tests/parse_print/autogen/441~1435208191_85/spec.essence:16:14:
   |
16 |              partition({false, true, true, true}) - (partition() : `partition from bool`)),
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool

tests/parse_print/autogen/441~1435208191_85/spec.essence:16:53:
   |
16 |              partition({false, true, true, true}) - (partition() : `partition from bool`)),
   |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool
